k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitops
  labels:
    name: gitops
    environment: production
