k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitops-app-service
  namespace: gitops
  labels:
    app: gitops-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: gitops-app
